# Rust_eze

./: .env  .gitignore  Cargo.toml  ReadMe.md  otp.py
migrations/2024-09-18-162335_create_accounts_and_subaccounts/: down.sql  up.sql
src/: database.rs  lib.rs  main  main.rs  models.rs  moneytransfer.rs  otp.py  otp.rs  otp_implement.rs  recurringpayments.rs  schema.rs  sendalert.rs
