[package]
name = "rust_eze"
version = "0.1.0"
edition = "2021"


[dependencies]
otpauth = "0.5.1"
qrcode = "0.12"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
base32 = "0.4"
diesel = { version = "2.0.0", features = ["postgres","uuid","chrono"] }
dotenvy = "0.15.0"
uuid = { version = "1.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"]}
bigdecimal = { version = "0.3", features = ["serde"] }

